# WRM_projects

flowerpot_ws/: .gitignore  simple_working.py  test_sub.py  test_target_display.py  working_visualize.py  文件精确地址
flowerpot_ws/src/: README.md
flowerpot_ws/src/LSM10p_pkg/: README.md
flowerpot_ws/src/LSM10p_pkg/lslidar_driver/launch/: wheeltec_lidar.launch.py
flowerpot_ws/src/LSM10p_pkg/lslidar_driver/params/lidar_uart_ros2/: lsm10_p.yaml  lsn10p.yaml
flowerpot_ws/src/camera_pkg/: CMakeLists.txt  package.xml
flowerpot_ws/src/camera_pkg/src/: camera_node.cpp
flowerpot_ws/src/imu_pkg/: CMakeLists.txt  package.xml
flowerpot_ws/src/imu_pkg/include/imu_pkg/: serial_port.h
flowerpot_ws/src/imu_pkg/src/: imu_node.cpp
flowerpot_ws/src/radar_msgs/: CMakeLists.txt  package.xml
flowerpot_ws/src/radar_msgs/msg/: RadarTarget.msg  RadarTargetArray.msg
flowerpot_ws/src/radar_pkg/: CMakeLists.txt  CMakeLists.txt.backup  package.xml  radar_pkg.sh
flowerpot_ws/src/radar_pkg/launch/: radar_detection.launch.py
flowerpot_ws/src/radar_pkg/scripts/: lidar_visualize.py
flowerpot_ws/src/radar_pkg/src/: test1.cpp
flowerpot_ws/src/radar_pkg/test/: test_dbscan.cpp
flowerpot_ws/src/yolo11_msgs/: CMakeLists.txt  package.xml
flowerpot_ws/src/yolo11_msgs/msg/: CoordinateArray.msg
flowerpot_ws/src/yolo11_pkg/: CMakeLists.txt  README.md  package.xml
flowerpot_ws/src/yolo11_pkg/launch/: yolo11.launch.py
flowerpot_ws/src/yolo11_pkg/scripts/: Coordinate_Transformation.py  best_int8.onnx  camera.sh  flower.yaml  flower_data.yaml  onnx.py  take_photo.py
