<?xml version="1.0"?>
<package format="3">
  <name>radar_pkg</name>
  <version>0.1.0</version>
  <description>Point cloud fitting for pot detection</description>
  <maintainer email="wrm@example.com">wrm</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>radar_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>radar_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
