<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo11_msgs</name>
  <version>0.0.0</version>
  <description>YOLO11 custom messages for flower pot detection</description>
  <maintainer email="wrm@todo.todo">wrm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>      <!-- 替代 exec_depend，同时满足构建和运行时 -->
  <depend>rosidl_default_runtime</depend>   <!-- 运行时依赖，但不应该放在 member_of_group -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>